--- a/template.yaml
+++ b/template.yaml
@@ -1,23 +1,23 @@
 AWSTemplateFormatVersion: '2010-09-09'
 Transform: AWS::Serverless-2016-10-31
-Description: Minimal POSIX shell custom runtime layer for provided.al2023 (arm64).
+Description: Minimal POSIX shell custom runtime layer for provided.al2023 (arm64, x86_64).
 
 Metadata:
   AWS::ServerlessRepo::Application:
     Name: lambda-shell-runtime
-    Description: Minimal POSIX shell custom runtime layer for provided.al2023 (arm64) including AWS CLI v2 and jq.
+    Description: Minimal POSIX shell custom runtime layer for provided.al2023 (arm64, x86_64) including AWS CLI v2 and jq.
     Author: lambda-shell-runtime maintainers
     SpdxLicenseId: Apache-2.0
     LicenseUrl: LICENSE
     ReadmeUrl: README.md
-    Labels: [lambda, runtime, layer, shell, provided.al2023, arm64]
-    SemanticVersion: 0.1.0
+    Labels: [lambda, runtime, layer, shell, provided.al2023, arm64, x86_64]
+    SemanticVersion: 2.32.26
 
 Resources:
-  LambdaShellRuntimeLayer:
+  LambdaShellRuntimeLayerArm64:
     Type: AWS::Serverless::LayerVersion
     Properties:
-      LayerName: lambda-shell-runtime
+      LayerName: lambda-shell-runtime-arm64
       Description: Minimal POSIX shell custom runtime for provided.al2023 (arm64).
       ContentUri: dist/lambda-shell-runtime-arm64.zip
       CompatibleRuntimes:
@@ -26,7 +26,22 @@ Resources:
         - arm64
       LicenseInfo: Apache-2.0
 
+  LambdaShellRuntimeLayerAmd64:
+    Type: AWS::Serverless::LayerVersion
+    Properties:
+      LayerName: lambda-shell-runtime-amd64
+      Description: Minimal POSIX shell custom runtime for provided.al2023 (x86_64).
+      ContentUri: dist/lambda-shell-runtime-amd64.zip
+      CompatibleRuntimes:
+        - provided.al2023
+      CompatibleArchitectures:
+        - x86_64
+      LicenseInfo: Apache-2.0
+
 Outputs:
-  LayerVersionArn:
-    Description: ARN of the published Lambda layer version.
-    Value: !Ref LambdaShellRuntimeLayer
+  LayerVersionArnArm64:
+    Description: ARN of the published Lambda layer version (arm64).
+    Value: !Ref LambdaShellRuntimeLayerArm64
+  LayerVersionArnAmd64:
+    Description: ARN of the published Lambda layer version (x86_64).
+    Value: !Ref LambdaShellRuntimeLayerAmd64
