--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,6 +9,7 @@ on:
 permissions:
   contents: read
   checks: write
+  id-token: write
 
 jobs:
   build-and-test:
@@ -19,19 +20,11 @@ jobs:
         with:
           submodules: recursive
 
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v3
-        with:
-          platforms: arm64
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-
       - name: Set up SAM CLI
         uses: aws-actions/setup-sam@v2
 
-      - name: Build layer
-        run: make build
+      - name: Build layer (amd64)
+        run: make build-amd64
 
       - name: Run ShellSpec
         id: shellspec
@@ -58,3 +51,16 @@ jobs:
       - name: Fail if tests failed
         if: steps.shellspec.outcome != 'success'
         run: exit 1
+
+      - name: Configure AWS credentials (OIDC)
+        if: github.ref == 'refs/heads/main' && github.event_name == 'push'
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+          role-to-assume: ${{ secrets.AWS_ROLE_ARN }}
+          aws-region: ${{ vars.AWS_REGION }}
+
+      - name: Publish dev SAR (amd64)
+        if: github.ref == 'refs/heads/main' && github.event_name == 'push' && steps.shellspec.outcome == 'success'
+        run: |
+          make delete-dev-amd64
+          make publish-dev-amd64
