Unify SAR tooling for dev and prod

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -59,8 +59,11 @@ jobs:
           role-to-assume: ${{ secrets.AWS_ROLE_ARN }}
           aws-region: ${{ vars.AWS_REGION }}
 
-      - name: Publish dev SAR (amd64)
+      - name: Publish and deploy dev SAR (amd64)
         if: github.ref == 'refs/heads/main' && github.event_name == 'push' && steps.shellspec.outcome == 'success'
+        env:
+          ENV: dev
         run: |
-          make delete-dev-amd64
-          make publish-dev-amd64
+          make delete-sar ARCH=amd64
+          make publish-sar ARCH=amd64
+          make deploy-sar ARCH=amd64
