Tighten AWS check for SAR deploy permissions

--- a/.github/workflows/aws-check.yml
+++ b/.github/workflows/aws-check.yml
@@ -22,5 +22,14 @@ jobs:
 
       - name: Run AWS checks
         env:
+          ENV: dev
+          AWS_CHECK_ARCHES: amd64
+          S3_BUCKET: ${{ vars.S3_BUCKET_DEV }}
+        run: make aws-check
+
+      - name: Run AWS checks (prod)
+        env:
+          ENV: prod
+          AWS_CHECK_ARCHES: "arm64 amd64"
           S3_BUCKET: ${{ vars.S3_BUCKET }}
         run: make aws-check
